fixes navbar dropdowns behavior on small devices

--- a/css/general.css
+++ b/css/general.css
@@ -44,44 +44,69 @@ code {
     position: static;
 }
 
-.nav > li.dropdown.open .home-dropdown {
-    display: table;
-    width: 100%;
-    text-align: center;
-    left: 0;
-    right: 0;
-    margin-top: -24px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    background-color: rgba(155, 230, 253, 0.875);
+@media screen and (min-width: 780px){
+    .nav > li.dropdown.open .home-dropdown {
+        display: table;
+        width: 100%;
+        text-align: center;
+        left: 0;
+        right: 0;
+        margin-top: -24px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+        background-color: rgba(155, 230, 253, 0.875);
+    }
+
+    .home-dropdown > li {
+        display: table-cell;
+    }
+
+    .home-dropdown > li > a {
+        color: #cc1f00;
+        margin: 1px;
+    }
+
+    .home-dropdown > li > a:hover, .home-dropdown > li > a:focus {
+        color: #cc1f00;
+        text-decoration: none;
+        background-color: transparent;
+        border-color: rgba(0, 69, 146, 0.5);
+        border-style: groove;
+        border-radius: 25px;
+        border-width: medium;
+        margin: -2px;
+    }
+    
+    .dropdown-icon {
+        padding-right: 10px;
+    }
+    
 }
 
-.home-dropdown > li {
-    display: table-cell;
-}
-
-.home-dropdown > li > a {
-    color: #cc1f00;
-}
-
-.home-dropdown > li > a:hover, .home-dropdown > li > a:focus {
-    color: #cc1f00;
-    text-decoration: none;
-    background-color: transparent;
-    border-color: rgba(0, 69, 146, 0.5);
-    border-style: groove;
-    border-radius: 25px;
-    border-width: medium;
-    margin: -2px;
-}
-
-.home-dropdown > li > a {
-    margin: 1px;
-}
-
-.dropdown-icon {
-    padding-right: 10px;
-}
+@media screen and (max-width: 767px){
+    .nav > li.dropdown.open .home-dropdown {
+        display: list-item;
+        text-align: left;
+        background-color: rgba(0, 69, 146, 0.5);
+    }
+    
+    .home-dropdown > li > a > h4 {
+        color: lightgray;
+        font-size: 14px;
+    }
+    
+    .home-dropdown > li > a:hover > h4, .home-dropdown > li > a:focus > h4 {
+        color: #ff3c1a;
+        text-decoration: none;
+        background-color: transparent;
+        font-size: 14px;
+    }
+    
+    .dropdown-icon {
+        display: none;
+    }
+    
+}    
 
 .navbar-fixed-top {
     min-height: 100px;
